// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArtifactDetails Component > renders correctly 1`] = `
.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(0, 0, 0, 0.87);
  font-size: 13px;
  margin-right: 2vw;
  min-width: 200px;
  padding: 0;
  width: initial;
}

.emotion-1 bordered {
  border-bottom: 1px solid;
  border-bottom-color: #9e9e9e;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-top: 6px;
  margin-bottom: 6px;
}

.MuiTypography-root:where(.emotion-2 .MuiListItemText-primary) {
  display: block;
}

.MuiTypography-root:where(.emotion-2 .MuiListItemText-secondary) {
  display: block;
}

.emotion-3 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  color: rgba(0, 0, 0, 0.6);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
}

.emotion-7 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
}

.MuiTypography-root:where(.emotion-7 .MuiListItemText-primary) {
  display: block;
}

.MuiTypography-root:where(.emotion-7 .MuiListItemText-secondary) {
  display: block;
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
}

.emotion-10 {
  display: block;
  white-space: pre-wrap;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 6px 8px;
  color: var(--variant-textColor);
  background-color: var(--variant-textBg);
  --variant-textColor: #1976d2;
  --variant-outlinedColor: #1976d2;
  --variant-outlinedBorder: rgba(25, 118, 210, 0.5);
  --variant-containedColor: #fff;
  --variant-containedBg: #1976d2;
  padding: 4px 5px;
  font-size: 0.8125rem;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-11::-moz-focus-inner {
  border-style: none;
}

.emotion-11.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-11 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

@media (hover: hover) {
  .emotion-11:hover {
    --variant-containedBg: #1565c0;
    --variant-textBg: rgba(25, 118, 210, 0.04);
    --variant-outlinedBorder: #1976d2;
    --variant-outlinedBg: rgba(25, 118, 210, 0.04);
  }
}

.emotion-11.MuiButton-loading {
  color: transparent;
}

.emotion-12 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
  margin-left: -2px;
}

.emotion-12>*:nth-of-type(1) {
  font-size: 18px;
}

.emotion-13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
}

.emotion-32 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  position: relative;
  -webkit-transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  overflow-anchor: none;
  background: #9e9e9e;
  border-top: none;
  padding: 0 15px;
  margin-bottom: 30px;
}

.emotion-32::before {
  position: absolute;
  left: 0;
  top: -1px;
  right: 0;
  height: 1px;
  content: "";
  opacity: 1;
  background-color: rgba(0, 0, 0, 0.12);
  -webkit-transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-32:first-of-type::before {
  display: none;
}

.emotion-32.Mui-expanded::before {
  opacity: 0;
}

.emotion-32.Mui-expanded:first-of-type {
  margin-top: 0;
}

.emotion-32.Mui-expanded:last-of-type {
  margin-bottom: 0;
}

.emotion-32.Mui-expanded+.emotion-32.Mui-expanded::before {
  display: none;
}

.emotion-32.Mui-disabled {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-32.Mui-expanded {
  margin: 16px 0;
}

.emotion-32.Mui-expanded {
  background: #9e9e9e;
  margin-bottom: 30px;
}

.emotion-33 {
  all: unset;
}

.emotion-34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 48px;
  padding: 0px 16px;
  -webkit-transition: min-height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: min-height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  background: #9e9e9e;
  padding: 0;
}

.emotion-34::-moz-focus-inner {
  border-style: none;
}

.emotion-34.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-34 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-34.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-34.Mui-disabled {
  opacity: 0.38;
}

.emotion-34:hover:not(.Mui-disabled) {
  cursor: pointer;
}

.emotion-34.Mui-expanded {
  min-height: 64px;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 12px 0;
  -webkit-transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-35.Mui-expanded {
  margin: 20px 0;
}

.emotion-37 {
  height: 0;
  overflow: hidden;
  -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  visibility: hidden;
}

.emotion-38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-39 {
  width: 100%;
}

.emotion-41 {
  padding: 8px 16px 16px;
  background: #9e9e9e;
  padding: 0;
}

.emotion-52 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 6px 8px;
  color: var(--variant-textColor);
  background-color: var(--variant-textBg);
  --variant-textColor: #1976d2;
  --variant-outlinedColor: #1976d2;
  --variant-outlinedBorder: rgba(25, 118, 210, 0.5);
  --variant-containedColor: #fff;
  --variant-containedBg: #1976d2;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-52::-moz-focus-inner {
  border-style: none;
}

.emotion-52.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-52 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-52:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-52.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

@media (hover: hover) {
  .emotion-52:hover {
    --variant-containedBg: #1565c0;
    --variant-textBg: rgba(25, 118, 210, 0.04);
    --variant-outlinedBorder: #1976d2;
    --variant-outlinedBg: rgba(25, 118, 210, 0.04);
  }
}

.emotion-52.MuiButton-loading {
  color: transparent;
}

.emotion-53 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-53>*:nth-of-type(1) {
  font-size: 20px;
}

<div>
  <ul
    class="MuiList-root MuiList-padding list-horizontal-flex emotion-0"
  >
    <li
      class="MuiListItem-root attributes MuiListItem-gutters MuiListItem-padding emotion-1"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline emotion-2"
        style="margin-bottom: -3px; min-width: 600px;"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
          style="margin-bottom: 3px;"
        >
          Description
        </span>
        <div
          class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
        >
          <div
            class="flexbox"
            style="align-items: end;"
          >
            <div
              class="full-width margin-right emotion-5"
            >
              <div
                class="MuiListItem-root attributes MuiListItem-dense MuiListItem-padding MuiListItem-divider emotion-6"
              >
                <div
                  class="MuiListItemText-root MuiListItemText-dense emotion-7"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary emotion-8"
                  />
                  <div
                    class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
                    title="text"
                  >
                    <span
                      class="emotion-10"
                    >
                      text
                    </span>
                     
                  </div>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary emotion-11"
              style="padding: 5px;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall emotion-12"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-13"
                  data-testid="EditIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                  />
                </svg>
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      class="MuiListItem-root attributes MuiListItem-gutters MuiListItem-padding undefined emotion-1"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline emotion-2"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
        >
          Signed
        </span>
        <p
          class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red emotion-13"
            data-testid="CancelOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
            />
          </svg>
        </p>
      </div>
    </li>
  </ul>
  <p
    class="margin-bottom-none"
  >
    Software versioning information
  </p>
  <ul
    class="MuiList-root MuiList-padding list-horizontal-flex emotion-0"
    style="padding-top: 0px;"
  >
    <div
      class=""
    >
      <li
        class="MuiListItem-root attributes MuiListItem-gutters MuiListItem-padding MuiListItem-divider emotion-20"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline emotion-2"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
          >
            Software filesystem
          </span>
          <div
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
            title="data-partition"
          >
            <span
              class="inventory-text"
            >
              data-partition
            </span>
             
          </div>
        </div>
      </li>
    </div>
    <div
      class=""
    >
      <li
        class="MuiListItem-root attributes MuiListItem-gutters MuiListItem-padding MuiListItem-divider emotion-20"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline emotion-2"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
          >
            Software name
          </span>
          <div
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
            title="myapp"
          >
            <span
              class="inventory-text"
            >
              myapp
            </span>
             
          </div>
        </div>
      </li>
    </div>
    <div
      class=""
    >
      <li
        class="MuiListItem-root attributes MuiListItem-gutters MuiListItem-padding MuiListItem-divider emotion-20"
      >
        <div
          class="MuiListItemText-root MuiListItemText-multiline emotion-2"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
          >
            Software version
          </span>
          <div
            class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
            title="v2020.10"
          >
            <span
              class="inventory-text"
            >
              v2020.10
            </span>
             
          </div>
        </div>
      </li>
    </div>
  </ul>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAccordion-root MuiAccordion-gutters emotion-32"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading emotion-33"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters emotion-34"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters emotion-35"
        >
          <p>
            Artifact contents
          </p>
          <div
            style="margin-left: auto;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-13"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </div>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden emotion-37"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical emotion-38"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-39"
        >
          <div
            class="MuiAccordion-region emotion-40"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root emotion-41"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAccordion-root MuiAccordion-gutters emotion-32"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading emotion-33"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters emotion-34"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters emotion-35"
        >
          <p>
            Provides and Depends
          </p>
          <div
            style="margin-left: auto;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-13"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </div>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden emotion-37"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical emotion-38"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-39"
        >
          <div
            class="MuiAccordion-region emotion-40"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root emotion-41"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="two-columns margin-top-small"
    style="max-width: fit-content;"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary emotion-52"
      disabled=""
      download="test.mender"
      tabindex="-1"
      target="_blank"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-53"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-13"
          data-testid="ExitToAppIcon"
          focusable="false"
          style="transform: rotateZ(90deg);"
          viewBox="0 0 24 24"
        >
          <path
            d="M10.09 15.59 11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2"
          />
        </svg>
      </span>
      Download Artifact
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary emotion-52"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-53"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red auth emotion-13"
          data-testid="CancelIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
          />
        </svg>
      </span>
      Remove this Artifact?
    </button>
  </div>
</div>
`;

exports[`ArtifactDetails Component > renders correctly without software 1`] = `
.emotion-0 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(0, 0, 0, 0.87);
  font-size: 13px;
  margin-right: 2vw;
  min-width: 200px;
  padding: 0;
  width: initial;
}

.emotion-1 bordered {
  border-bottom: 1px solid;
  border-bottom-color: #9e9e9e;
}

.emotion-2 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-top: 6px;
  margin-bottom: 6px;
}

.MuiTypography-root:where(.emotion-2 .MuiListItemText-primary) {
  display: block;
}

.MuiTypography-root:where(.emotion-2 .MuiListItemText-secondary) {
  display: block;
}

.emotion-3 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
}

.emotion-4 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  color: rgba(0, 0, 0, 0.6);
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
}

.emotion-7 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
}

.MuiTypography-root:where(.emotion-7 .MuiListItemText-primary) {
  display: block;
}

.MuiTypography-root:where(.emotion-7 .MuiListItemText-secondary) {
  display: block;
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
}

.emotion-10 {
  display: block;
  white-space: pre-wrap;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 6px 8px;
  color: var(--variant-textColor);
  background-color: var(--variant-textBg);
  --variant-textColor: #1976d2;
  --variant-outlinedColor: #1976d2;
  --variant-outlinedBorder: rgba(25, 118, 210, 0.5);
  --variant-containedColor: #fff;
  --variant-containedBg: #1976d2;
  padding: 4px 5px;
  font-size: 0.8125rem;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-11::-moz-focus-inner {
  border-style: none;
}

.emotion-11.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-11 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-11:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

@media (hover: hover) {
  .emotion-11:hover {
    --variant-containedBg: #1565c0;
    --variant-textBg: rgba(25, 118, 210, 0.04);
    --variant-outlinedBorder: #1976d2;
    --variant-outlinedBg: rgba(25, 118, 210, 0.04);
  }
}

.emotion-11.MuiButton-loading {
  color: transparent;
}

.emotion-12 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
  margin-left: -2px;
}

.emotion-12>*:nth-of-type(1) {
  font-size: 18px;
}

.emotion-13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-19 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  position: relative;
  -webkit-transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  overflow-anchor: none;
  background: #9e9e9e;
  border-top: none;
  padding: 0 15px;
  margin-bottom: 30px;
}

.emotion-19::before {
  position: absolute;
  left: 0;
  top: -1px;
  right: 0;
  height: 1px;
  content: "";
  opacity: 1;
  background-color: rgba(0, 0, 0, 0.12);
  -webkit-transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-19:first-of-type::before {
  display: none;
}

.emotion-19.Mui-expanded::before {
  opacity: 0;
}

.emotion-19.Mui-expanded:first-of-type {
  margin-top: 0;
}

.emotion-19.Mui-expanded:last-of-type {
  margin-bottom: 0;
}

.emotion-19.Mui-expanded+.emotion-19.Mui-expanded::before {
  display: none;
}

.emotion-19.Mui-disabled {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-19.Mui-expanded {
  margin: 16px 0;
}

.emotion-19.Mui-expanded {
  background: #9e9e9e;
  margin-bottom: 30px;
}

.emotion-20 {
  all: unset;
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 48px;
  padding: 0px 16px;
  -webkit-transition: min-height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: min-height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  background: #9e9e9e;
  padding: 0;
}

.emotion-21::-moz-focus-inner {
  border-style: none;
}

.emotion-21.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-21 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-21.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-21.Mui-disabled {
  opacity: 0.38;
}

.emotion-21:hover:not(.Mui-disabled) {
  cursor: pointer;
}

.emotion-21.Mui-expanded {
  min-height: 64px;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 12px 0;
  -webkit-transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-22.Mui-expanded {
  margin: 20px 0;
}

.emotion-24 {
  height: 0;
  overflow: hidden;
  -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  visibility: hidden;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-26 {
  width: 100%;
}

.emotion-28 {
  padding: 8px 16px 16px;
  background: #9e9e9e;
  padding: 0;
}

.emotion-34 {
  height: 0;
  overflow: hidden;
  -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
}

.emotion-44 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 6px 8px;
  color: var(--variant-textColor);
  background-color: var(--variant-textBg);
  --variant-textColor: #1976d2;
  --variant-outlinedColor: #1976d2;
  --variant-outlinedBorder: rgba(25, 118, 210, 0.5);
  --variant-containedColor: #fff;
  --variant-containedBg: #1976d2;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-44::-moz-focus-inner {
  border-style: none;
}

.emotion-44.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-44 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-44:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-44.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

@media (hover: hover) {
  .emotion-44:hover {
    --variant-containedBg: #1565c0;
    --variant-textBg: rgba(25, 118, 210, 0.04);
    --variant-outlinedBorder: #1976d2;
    --variant-outlinedBg: rgba(25, 118, 210, 0.04);
  }
}

.emotion-44.MuiButton-loading {
  color: transparent;
}

.emotion-45 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-45>*:nth-of-type(1) {
  font-size: 20px;
}

<div>
  <ul
    class="MuiList-root MuiList-padding list-horizontal-flex emotion-0"
  >
    <li
      class="MuiListItem-root attributes MuiListItem-gutters MuiListItem-padding emotion-1"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline emotion-2"
        style="margin-bottom: -3px; min-width: 600px;"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
          style="margin-bottom: 3px;"
        >
          Description
        </span>
        <div
          class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
        >
          <div
            class="flexbox"
            style="align-items: end;"
          >
            <div
              class="full-width margin-right emotion-5"
            >
              <div
                class="MuiListItem-root attributes MuiListItem-dense MuiListItem-padding MuiListItem-divider emotion-6"
              >
                <div
                  class="MuiListItemText-root MuiListItemText-dense emotion-7"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary emotion-8"
                  />
                  <div
                    class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
                    title="text"
                  >
                    <span
                      class="emotion-10"
                    >
                      text
                    </span>
                     
                  </div>
                </div>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary emotion-11"
              style="padding: 5px;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall emotion-12"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-13"
                  data-testid="EditIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                  />
                </svg>
              </span>
              Edit
            </button>
          </div>
        </div>
      </div>
    </li>
    <li
      class="MuiListItem-root attributes MuiListItem-gutters MuiListItem-padding undefined emotion-1"
    >
      <div
        class="MuiListItemText-root MuiListItemText-multiline emotion-2"
      >
        <span
          class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
        >
          Signed
        </span>
        <p
          class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red emotion-13"
            data-testid="CancelOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m3.59-13L12 10.59 8.41 7 7 8.41 10.59 12 7 15.59 8.41 17 12 13.41 15.59 17 17 15.59 13.41 12 17 8.41z"
            />
          </svg>
        </p>
      </div>
    </li>
  </ul>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAccordion-root MuiAccordion-gutters emotion-19"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading emotion-20"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters emotion-21"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters emotion-22"
        >
          <p>
            Artifact contents
          </p>
          <div
            style="margin-left: auto;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-13"
              data-testid="AddIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
              />
            </svg>
          </div>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden emotion-24"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical emotion-25"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-26"
        >
          <div
            class="MuiAccordion-region emotion-27"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root emotion-28"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAccordion-root Mui-expanded MuiAccordion-gutters emotion-19"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading emotion-20"
    >
      <button
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters emotion-21"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters emotion-22"
        >
          <p>
            Provides and Depends
          </p>
          <div
            style="margin-left: auto;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-13"
              data-testid="RemoveIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13H5v-2h14z"
              />
            </svg>
          </div>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical emotion-34"
      style="min-height: 0px; height: 0px; transition-duration: 0ms;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical emotion-25"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-26"
        >
          <div
            class="MuiAccordion-region emotion-27"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root emotion-28"
            >
              <p
                class="margin-bottom-none"
              >
                Provides
              </p>
              <ul
                class="MuiList-root MuiList-padding list-horizontal-flex emotion-0"
                style="padding-top: 0px;"
              >
                <div
                  class=""
                >
                  <li
                    class="MuiListItem-root attributes MuiListItem-gutters MuiListItem-padding MuiListItem-divider emotion-40"
                  >
                    <div
                      class="MuiListItemText-root MuiListItemText-multiline emotion-2"
                    >
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-3"
                      >
                        list_of_fancy
                      </span>
                      <div
                        class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-4"
                        title="x172"
                      >
                        <span
                          class="inventory-text"
                        >
                          x172
                        </span>
                         
                      </div>
                    </div>
                  </li>
                </div>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="two-columns margin-top-small"
    style="max-width: fit-content;"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary emotion-44"
      disabled=""
      download="test.mender"
      tabindex="-1"
      target="_blank"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-45"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-13"
          data-testid="ExitToAppIcon"
          focusable="false"
          style="transform: rotateZ(90deg);"
          viewBox="0 0 24 24"
        >
          <path
            d="M10.09 15.59 11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67zM19 3H5c-1.11 0-2 .9-2 2v4h2V5h14v14H5v-4H3v4c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2"
          />
        </svg>
      </span>
      Download Artifact
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary emotion-44"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-45"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red auth emotion-13"
          data-testid="CancelIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12z"
          />
        </svg>
      </span>
      Remove this Artifact?
    </button>
  </div>
</div>
`;
